--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,20 @@
 {
-    "name": "dothanhdat/hello-composer",
+    "name": "dothanhdat/hello-compose",
     "description": "A simple hello world composer package",
-    "type": "library",
+    "type": "php",
+    "require": {
+        "php": ">=5.3.0",
+        "dothanhdat/hello-composer": "^1.0"
+    },
     "license": "MIT",
     "authors": [
         {
-            "name": "Ogbonna Vitalis",
-            "email": "agavitalisogbonna@gmail.com"
+            "name": "DoThanhDat",
+            "email": "dothanhdatkhmt@gmail.com",
+            "homepage": "http://yourhomepage-if-you-have.com"
         }
     ],
-    "minimum-stability": "dev",
     "autoload": {
-        "psr-4": {"dothanhdat\\HelloWorld\\": "src/"}
-    },
-    "require": {}
+        "psr-4": {"dothanhdat\\HelloComposer\\": "src/"}
+    } 
 }
-
